--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -226,6 +226,7 @@ BITCOIN_CORE_H = \
   util/string.h \
   util/threadnames.h \
   util/time.h \
+  util/transaction.h \
   util/translation.h \
   util/url.h \
   util/vector.h \
